--- a/Lenguaje_de_marcas/mangak/index.html
+++ b/Lenguaje_de_marcas/mangak/index.html
@@ -340,7 +340,7 @@
 
             <article id="seinen">
                 <h4>Houseki no Kuni</h4>
-                <a href="">
+                <a href="mangas/houseki-no-kuni/front.html">
                     <img id="PORTADAS" src="images/portadas/houseki-no-kuni.jpg" alt="">
                 </a>
             </article>
@@ -361,70 +361,70 @@
 
             <article id="seinen">
                 <h4>Tsuyokute New Saga</h4>
-                <a href="">
+                <a href="mangas/">
                     <img id="PORTADAS" src="images/portadas/tsuyokute-new-saga.jpg" alt="">
                 </a>
             </article>
 
             <article id="kodomo">
                 <h4>Spy x Family </h4>
-                <a href="">
+                <a href="mangas/">
                     <img id="PORTADAS" src="images/portadas/spy-x-family.jpg" alt="">
                 </a>
             </article>
 
             <article id="seinen">
                 <h4>Chainsaw Man</h4>
-                <a href="">
+                <a href="mangas/">
                     <img id="PORTADAS" src="images/portadas/chainsaw-man.jpg" alt="">
                 </a>
             </article>
 
             <article id="seinen">
                 <h4>Black Clover</h4>
-                <a href="">
+                <a href="mangas/">
                     <img id="PORTADAS" src="images/portadas/black-clover.jpg" alt="">
                 </a>
             </article>
 
             <article id="seinen">
                 <h4>Crunch</h4>
-                <a href="">
+                <a href="mangas/">
                     <img id="PORTADAS" src="images/portadas/crunch.jpg" alt="">
                 </a>
             </article>
 
             <article id="seinen">
                 <h4>Fire Punch</h4>
-                <a href="">
+                <a href="mangas/">
                     <img id="PORTADAS" src="images/portadas/fire-punch.jpg" alt="">
                 </a>
             </article>
 
             <article id="josei">
                 <h4>Ayanashi</h4>
-                <a href="">
+                <a href="mangas/">
                     <img id="PORTADAS" src="images/portadas/ayanashi.jpg" alt="">
                 </a>
             </article>
 
             <article id="seinen">
                 <h4>Bleach</h4>
-                <a href="">
+                <a href="mangas/">
                     <img id="PORTADAS" src="images/portadas/bleach.jpg" alt="">
                 </a>
             </article>
             
             <article id="seinen">
                 <h4>Gokurakugai</h4>
-                <a href="">
+                <a href="mangas/">
                     <img id="PORTADAS" src="images/portadas/gokurakugai.jpg" alt="">
                 </a>
             </article>
 
             <article id="seinen">
                 <h4>Full Metal Alchemist</h4>
-                <a href="">
+                <a href="mangas/">
                     <img id="PORTADAS" src="images/portadas/fullmetal-alchemist.jpg" alt="">
                 </a>
             </article>
