--- a/Lenguaje_de_marcas/mangak/mangas/houseki-no-kuni/cap5.html
+++ b/Lenguaje_de_marcas/mangak/mangas/houseki-no-kuni/cap5.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="../../styles/fontawesome-free-6.3.0-web/css/all.css">
     <!-- icons-source -->
     <!-- https://fontawesome.com/icons/tag?s=solid&f=classic -->
-    <title>Capitulo 9</title>
+    <title>Capitulo 5</title>
 </head>
 
 <body>
@@ -72,35 +72,35 @@
     <main>
 
         <section class="control">
-            <a class="adelante" href="cap8.html"><i class="fa-solid fa-backward"></i></a>
+            <a class="adelante" href="cap4.html"><i class="fa-solid fa-backward"></i></a>
             <a class="menu" href="front.html"><i class="fa-solid fa-house"></i></a>
-            <a class="atras" href="cap10.html"><i class="fa-solid fa-forward"></i></a>
+            <a class="atras" href="cap6.html"><i class="fa-solid fa-forward"></i></a>
             <a class="arribaPag" href="#arriba"><i class="fa-solid fa-angle-up"></i></a>
         </section>
 
-        <img class="pagina" id="arriba" src="https://via.placeholder.com/827x1200?text=IronLadies" alt="">
-        <img class="pagina" src="https://via.placeholder.com/827x1200?text=IronLadies" alt="">
-        <img class="pagina" src="https://via.placeholder.com/827x1200?text=IronLadies" alt="">
-        <img class="pagina" src="https://via.placeholder.com/827x1200?text=IronLadies" alt="">
-        <img class="pagina" src="https://via.placeholder.com/827x1200?text=IronLadies" alt="">
-        <img class="pagina" src="https://via.placeholder.com/827x1200?text=IronLadies" alt="">
-        <img class="pagina" src="https://via.placeholder.com/827x1200?text=IronLadies" alt="">
-        <img class="pagina" src="https://via.placeholder.com/827x1200?text=IronLadies" alt="">
-        <img class="pagina" src="https://via.placeholder.com/827x1200?text=IronLadies" alt="">
-        <img class="pagina" src="https://via.placeholder.com/827x1200?text=IronLadies" alt="">
-        <img class="pagina" src="https://via.placeholder.com/827x1200?text=IronLadies" alt="">
-        <img class="pagina" src="https://via.placeholder.com/827x1200?text=IronLadies" alt="">
-        <img class="pagina" src="https://via.placeholder.com/827x1200?text=IronLadies" alt="">
-        <img class="pagina" src="https://via.placeholder.com/827x1200?text=IronLadies" alt="">
-        <img class="pagina" src="https://via.placeholder.com/827x1200?text=IronLadies" alt="">
-        <img class="pagina" src="https://via.placeholder.com/827x1200?text=IronLadies" alt="">
-        <img class="pagina" src="https://via.placeholder.com/827x1200?text=IronLadies" alt="">
-        <img class="pagina" src="https://via.placeholder.com/827x1200?text=IronLadies" alt="">
-        <img class="pagina" src="https://via.placeholder.com/827x1200?text=IronLadies" alt="">
-        <img class="pagina" src="https://via.placeholder.com/827x1200?text=IronLadies" alt="">
-        <img class="pagina" src="https://via.placeholder.com/827x1200?text=IronLadies" alt="">
-        <img class="pagina" src="https://via.placeholder.com/827x1200?text=IronLadies" alt="">
-        <img class="pagina" src="https://via.placeholder.com/827x1200?text=IronLadies" alt="">
+        <img class="pagina" id="arriba" src="https://via.placeholder.com/827x1200?text=Houseki-No-Kuni" alt="">
+        <img class="pagina" src="https://via.placeholder.com/827x1200?text=Houseki-No-Kuni" alt="">
+        <img class="pagina" src="https://via.placeholder.com/827x1200?text=Houseki-No-Kuni" alt="">
+        <img class="pagina" src="https://via.placeholder.com/827x1200?text=Houseki-No-Kuni" alt="">
+        <img class="pagina" src="https://via.placeholder.com/827x1200?text=Houseki-No-Kuni" alt="">
+        <img class="pagina" src="https://via.placeholder.com/827x1200?text=Houseki-No-Kuni" alt="">
+        <img class="pagina" src="https://via.placeholder.com/827x1200?text=Houseki-No-Kuni" alt="">
+        <img class="pagina" src="https://via.placeholder.com/827x1200?text=Houseki-No-Kuni" alt="">
+        <img class="pagina" src="https://via.placeholder.com/827x1200?text=Houseki-No-Kuni" alt="">
+        <img class="pagina" src="https://via.placeholder.com/827x1200?text=Houseki-No-Kuni" alt="">
+        <img class="pagina" src="https://via.placeholder.com/827x1200?text=Houseki-No-Kuni" alt="">
+        <img class="pagina" src="https://via.placeholder.com/827x1200?text=Houseki-No-Kuni" alt="">
+        <img class="pagina" src="https://via.placeholder.com/827x1200?text=Houseki-No-Kuni" alt="">
+        <img class="pagina" src="https://via.placeholder.com/827x1200?text=Houseki-No-Kuni" alt="">
+        <img class="pagina" src="https://via.placeholder.com/827x1200?text=Houseki-No-Kuni" alt="">
+        <img class="pagina" src="https://via.placeholder.com/827x1200?text=Houseki-No-Kuni" alt="">
+        <img class="pagina" src="https://via.placeholder.com/827x1200?text=Houseki-No-Kuni" alt="">
+        <img class="pagina" src="https://via.placeholder.com/827x1200?text=Houseki-No-Kuni" alt="">
+        <img class="pagina" src="https://via.placeholder.com/827x1200?text=Houseki-No-Kuni" alt="">
+        <img class="pagina" src="https://via.placeholder.com/827x1200?text=Houseki-No-Kuni" alt="">
+        <img class="pagina" src="https://via.placeholder.com/827x1200?text=Houseki-No-Kuni" alt="">
+        <img class="pagina" src="https://via.placeholder.com/827x1200?text=Houseki-No-Kuni" alt="">
+        <img class="pagina" src="https://via.placeholder.com/827x1200?text=Houseki-No-Kuni" alt="">
     </main>
 
     <!-- Footer pag sim -->
