--- a/Lenguaje_de_marcas/mangak/mangas/.plantilla/front.html
+++ b/Lenguaje_de_marcas/mangak/mangas/.plantilla/front.html
@@ -8,7 +8,7 @@
     <link rel="icon" href="../../images/iconos/icon.ico" type="ico">
     <link rel="stylesheet" href="../../styles/mangaMenu.css">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css" rel="stylesheet">
-    <title>Berserk</title>
+    <title>NOMBRE</title>
 </head>
 
 <body>
@@ -77,21 +77,15 @@
     <main>
         <!-- portada manga -->
         <article class="portada">
-            <h2>Berserk</h2>
-            <img src="../../images/portadas/berserk.jpg" alt="">
+            <h2>Iron Ladies</h2>
+            <img src="../../images/portadas/iron-ladies.jpg" alt="">
         </article>
 
         <!-- Sinopsis -->
         <article class="sinopsis">
             <h2>Sinopsis</h2>
-            <p>Guts, un ex-mercenario conocido como el "Espadachín Negro", y en búsqueda de su venganza. Luego de una
-                tumultuosa infancia, él finalmente encuentra a alguien a quien respeta y en quien puede confiar; y todo
-                se desmorona cuando esta persona le arrebata todo lo importante para él, con el propósito de cumplir sus
-                propios deseos. Ahora, siendo portador de la marca, Guts se encuentra condenado a un destino en el que
-                es implacablemente perseguido por seres demoníacos. Encaminado en una terrible misión llena de
-                desgracia, Guts, armado con una espada gigante y una fuerza monstruosa, no dejará que nada lo detenga,
-                ni siquiera la misma muerte, hasta que sea capaz de tomar la cabeza de aquél que le robó toda su
-                humanidad.
+            <p>
+                SINOPSIS_CONTENT
             </p>
         </article>
 
