--- a/Lenguaje_de_marcas/mangak/mangas/houseki-no-kuni/cap3.html
+++ b/Lenguaje_de_marcas/mangak/mangas/houseki-no-kuni/cap3.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="../../styles/fontawesome-free-6.3.0-web/css/all.css">
     <!-- icons-source -->
     <!-- https://fontawesome.com/icons/tag?s=solid&f=classic -->
-    <title>Capitulo Numero</title>
+    <title>Capitulo 3</title>
 </head>
 
 <body>
@@ -48,6 +48,7 @@
             <input type="checkbox" id="check">
 
             <ul>
+
                 <!-- Contenido/EDITAR -->
 
                 <!-- Avatar -->
@@ -71,16 +72,34 @@
     <main>
 
         <section class="control">
-            <!-- <a class="adelante" href="cap1.html"><i class="fa-solid fa-backward"></i></a> -->
+            <a class="adelante" href="cap2.html"><i class="fa-solid fa-backward"></i></a>
             <a class="menu" href="front.html"><i class="fa-solid fa-house"></i></a>
-            <a class="atras" href="cap2.html"><i class="fa-solid fa-forward"></i></a>
+            <a class="atras" href="cap4.html"><i class="fa-solid fa-forward"></i></a>
             <a class="arribaPag" href="#arriba"><i class="fa-solid fa-angle-up"></i></a>
         </section>
-        <!-- https://mangapark.net/ -->
-        <!-- https://heavenmanga.com/ -->
-        <img class="pagina" id="arriba" src="" alt="">
-        <img class="pagina" src="" alt="">
-
+        <img class="pagina" id="arriba" src="https://via.placeholder.com/827x1200?text=Houseki-No-Kuni" alt="">
+        <img class="pagina" src="https://via.placeholder.com/827x1200?text=Houseki-No-Kuni" alt="">
+        <img class="pagina" src="https://via.placeholder.com/827x1200?text=Houseki-No-Kuni" alt="">
+        <img class="pagina" src="https://via.placeholder.com/827x1200?text=Houseki-No-Kuni" alt="">
+        <img class="pagina" src="https://via.placeholder.com/827x1200?text=Houseki-No-Kuni" alt="">
+        <img class="pagina" src="https://via.placeholder.com/827x1200?text=Houseki-No-Kuni" alt="">
+        <img class="pagina" src="https://via.placeholder.com/827x1200?text=Houseki-No-Kuni" alt="">
+        <img class="pagina" src="https://via.placeholder.com/827x1200?text=Houseki-No-Kuni" alt="">
+        <img class="pagina" src="https://via.placeholder.com/827x1200?text=Houseki-No-Kuni" alt="">
+        <img class="pagina" src="https://via.placeholder.com/827x1200?text=Houseki-No-Kuni" alt="">
+        <img class="pagina" src="https://via.placeholder.com/827x1200?text=Houseki-No-Kuni" alt="">
+        <img class="pagina" src="https://via.placeholder.com/827x1200?text=Houseki-No-Kuni" alt="">
+        <img class="pagina" src="https://via.placeholder.com/827x1200?text=Houseki-No-Kuni" alt="">
+        <img class="pagina" src="https://via.placeholder.com/827x1200?text=Houseki-No-Kuni" alt="">
+        <img class="pagina" src="https://via.placeholder.com/827x1200?text=Houseki-No-Kuni" alt="">
+        <img class="pagina" src="https://via.placeholder.com/827x1200?text=Houseki-No-Kuni" alt="">
+        <img class="pagina" src="https://via.placeholder.com/827x1200?text=Houseki-No-Kuni" alt="">
+        <img class="pagina" src="https://via.placeholder.com/827x1200?text=Houseki-No-Kuni" alt="">
+        <img class="pagina" src="https://via.placeholder.com/827x1200?text=Houseki-No-Kuni" alt="">
+        <img class="pagina" src="https://via.placeholder.com/827x1200?text=Houseki-No-Kuni" alt="">
+        <img class="pagina" src="https://via.placeholder.com/827x1200?text=Houseki-No-Kuni" alt="">
+        <img class="pagina" src="https://via.placeholder.com/827x1200?text=Houseki-No-Kuni" alt="">
+        <img class="pagina" src="https://via.placeholder.com/827x1200?text=Houseki-No-Kuni" alt="">
     </main>
 
     <!-- Footer pag sim -->
