--- a/Lenguaje_de_marcas/mangak/mangas/one-piece/cap17.html
+++ b/Lenguaje_de_marcas/mangak/mangas/one-piece/cap17.html
@@ -78,33 +78,29 @@
             <a class="arribaPag" href="#arriba"><i class="fa-solid fa-angle-up"></i></a>
         </section>
 
-        <img class="pagina" id="arriba" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/17/01.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/17/02.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/17/03.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/17/04.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/17/05.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/17/06.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/17/07.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/17/08.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/17/09.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/17/10.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/17/11.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/17/12.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/17/13.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/17/14.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/17/15.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/17/16.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/17/17.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/17/18.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/17/19.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/17/20.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/17/21.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/17/22.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/17/23.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/17/24.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/17/25.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/17/26.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/17/27.jpg" alt="">
+        <img class="pagina" id="arriba" src="https://via.placeholder.com/827x1200?text=OnePiece" alt="">
+        <img class="pagina" src="https://via.placeholder.com/827x1200?text=OnePiece" alt="">
+        <img class="pagina" src="https://via.placeholder.com/827x1200?text=OnePiece" alt="">
+        <img class="pagina" src="https://via.placeholder.com/827x1200?text=OnePiece" alt="">
+        <img class="pagina" src="https://via.placeholder.com/827x1200?text=OnePiece" alt="">
+        <img class="pagina" src="https://via.placeholder.com/827x1200?text=OnePiece" alt="">
+        <img class="pagina" src="https://via.placeholder.com/827x1200?text=OnePiece" alt="">
+        <img class="pagina" src="https://via.placeholder.com/827x1200?text=OnePiece" alt="">
+        <img class="pagina" src="https://via.placeholder.com/827x1200?text=OnePiece" alt="">
+        <img class="pagina" src="https://via.placeholder.com/827x1200?text=OnePiece" alt="">
+        <img class="pagina" src="https://via.placeholder.com/827x1200?text=OnePiece" alt="">
+        <img class="pagina" src="https://via.placeholder.com/827x1200?text=OnePiece" alt="">
+        <img class="pagina" src="https://via.placeholder.com/827x1200?text=OnePiece" alt="">
+        <img class="pagina" src="https://via.placeholder.com/827x1200?text=OnePiece" alt="">
+        <img class="pagina" src="https://via.placeholder.com/827x1200?text=OnePiece" alt="">
+        <img class="pagina" src="https://via.placeholder.com/827x1200?text=OnePiece" alt="">
+        <img class="pagina" src="https://via.placeholder.com/827x1200?text=OnePiece" alt="">
+        <img class="pagina" src="https://via.placeholder.com/827x1200?text=OnePiece" alt="">
+        <img class="pagina" src="https://via.placeholder.com/827x1200?text=OnePiece" alt="">
+        <img class="pagina" src="https://via.placeholder.com/827x1200?text=OnePiece" alt="">
+        <img class="pagina" src="https://via.placeholder.com/827x1200?text=OnePiece" alt="">
+        <img class="pagina" src="https://via.placeholder.com/827x1200?text=OnePiece" alt="">
+        <img class="pagina" src="https://via.placeholder.com/827x1200?text=OnePiece" alt="">
     </main>
 
     <!-- Footer pag sim -->
