--- a/Lenguaje_de_marcas/mangak/mangas/one-piece/cap19.html
+++ b/Lenguaje_de_marcas/mangak/mangas/one-piece/cap19.html
@@ -78,26 +78,29 @@
             <a class="arribaPag" href="#arriba"><i class="fa-solid fa-angle-up"></i></a>
         </section>
 
-        <img class="pagina" id="arriba" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/19/01.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/19/02.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/19/03.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/19/04.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/19/05.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/19/06.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/19/07.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/19/08.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/19/09.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/19/10.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/19/11.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/19/12.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/19/13.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/19/14.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/19/15.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/19/16.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/19/17.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/19/18.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/19/19.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/19/20.jpg" alt="">
+        <img class="pagina" id="arriba" src="https://via.placeholder.com/827x1200?text=OnePiece" alt="">
+        <img class="pagina" src="https://via.placeholder.com/827x1200?text=OnePiece" alt="">
+        <img class="pagina" src="https://via.placeholder.com/827x1200?text=OnePiece" alt="">
+        <img class="pagina" src="https://via.placeholder.com/827x1200?text=OnePiece" alt="">
+        <img class="pagina" src="https://via.placeholder.com/827x1200?text=OnePiece" alt="">
+        <img class="pagina" src="https://via.placeholder.com/827x1200?text=OnePiece" alt="">
+        <img class="pagina" src="https://via.placeholder.com/827x1200?text=OnePiece" alt="">
+        <img class="pagina" src="https://via.placeholder.com/827x1200?text=OnePiece" alt="">
+        <img class="pagina" src="https://via.placeholder.com/827x1200?text=OnePiece" alt="">
+        <img class="pagina" src="https://via.placeholder.com/827x1200?text=OnePiece" alt="">
+        <img class="pagina" src="https://via.placeholder.com/827x1200?text=OnePiece" alt="">
+        <img class="pagina" src="https://via.placeholder.com/827x1200?text=OnePiece" alt="">
+        <img class="pagina" src="https://via.placeholder.com/827x1200?text=OnePiece" alt="">
+        <img class="pagina" src="https://via.placeholder.com/827x1200?text=OnePiece" alt="">
+        <img class="pagina" src="https://via.placeholder.com/827x1200?text=OnePiece" alt="">
+        <img class="pagina" src="https://via.placeholder.com/827x1200?text=OnePiece" alt="">
+        <img class="pagina" src="https://via.placeholder.com/827x1200?text=OnePiece" alt="">
+        <img class="pagina" src="https://via.placeholder.com/827x1200?text=OnePiece" alt="">
+        <img class="pagina" src="https://via.placeholder.com/827x1200?text=OnePiece" alt="">
+        <img class="pagina" src="https://via.placeholder.com/827x1200?text=OnePiece" alt="">
+        <img class="pagina" src="https://via.placeholder.com/827x1200?text=OnePiece" alt="">
+        <img class="pagina" src="https://via.placeholder.com/827x1200?text=OnePiece" alt="">
+        <img class="pagina" src="https://via.placeholder.com/827x1200?text=OnePiece" alt="">
     </main>
 
     <!-- Footer pag sim -->
