--- a/Lenguaje_de_marcas/mangak/mangas/one-piece/cap3.html
+++ b/Lenguaje_de_marcas/mangak/mangas/one-piece/cap3.html
@@ -77,29 +77,29 @@
             <a class="atras" href="cap4.html"><i class="fa-solid fa-forward"></i></a>
             <a class="arribaPag" href="#arriba"><i class="fa-solid fa-angle-up"></i></a>
         </section>
-        <img class="pagina" id="arriba" src="https://via.placeholder.com/827x1200?text=PRUEBA" alt="">
-        <img class="pagina" src="https://via.placeholder.com/827x1200?text=PRUEBA" alt="">
-        <img class="pagina" src="https://via.placeholder.com/827x1200?text=PRUEBA" alt="">
-        <img class="pagina" src="https://via.placeholder.com/827x1200?text=PRUEBA" alt="">
-        <img class="pagina" src="https://via.placeholder.com/827x1200?text=PRUEBA" alt="">
-        <img class="pagina" src="https://via.placeholder.com/827x1200?text=PRUEBA" alt="">
-        <img class="pagina" src="https://via.placeholder.com/827x1200?text=PRUEBA" alt="">
-        <img class="pagina" src="https://via.placeholder.com/827x1200?text=PRUEBA" alt="">
-        <img class="pagina" src="https://via.placeholder.com/827x1200?text=PRUEBA" alt="">
-        <img class="pagina" src="https://via.placeholder.com/827x1200?text=PRUEBA" alt="">
-        <img class="pagina" src="https://via.placeholder.com/827x1200?text=PRUEBA" alt="">
-        <img class="pagina" src="https://via.placeholder.com/827x1200?text=PRUEBA" alt="">
-        <img class="pagina" src="https://via.placeholder.com/827x1200?text=PRUEBA" alt="">
-        <img class="pagina" src="https://via.placeholder.com/827x1200?text=PRUEBA" alt="">
-        <img class="pagina" src="https://via.placeholder.com/827x1200?text=PRUEBA" alt="">
-        <img class="pagina" src="https://via.placeholder.com/827x1200?text=PRUEBA" alt="">
-        <img class="pagina" src="https://via.placeholder.com/827x1200?text=PRUEBA" alt="">
-        <img class="pagina" src="https://via.placeholder.com/827x1200?text=PRUEBA" alt="">
-        <img class="pagina" src="https://via.placeholder.com/827x1200?text=PRUEBA" alt="">
-        <img class="pagina" src="https://via.placeholder.com/827x1200?text=PRUEBA" alt="">
-        <img class="pagina" src="https://via.placeholder.com/827x1200?text=PRUEBA" alt="">
-        <img class="pagina" src="https://via.placeholder.com/827x1200?text=PRUEBA" alt="">
-        <img class="pagina" src="https://via.placeholder.com/827x1200?text=PRUEBA" alt="">
+        <img class="pagina" id="arriba" src="https://via.placeholder.com/827x1200?text=OnePiece" alt="">
+        <img class="pagina" src="https://via.placeholder.com/827x1200?text=OnePiece" alt="">
+        <img class="pagina" src="https://via.placeholder.com/827x1200?text=OnePiece" alt="">
+        <img class="pagina" src="https://via.placeholder.com/827x1200?text=OnePiece" alt="">
+        <img class="pagina" src="https://via.placeholder.com/827x1200?text=OnePiece" alt="">
+        <img class="pagina" src="https://via.placeholder.com/827x1200?text=OnePiece" alt="">
+        <img class="pagina" src="https://via.placeholder.com/827x1200?text=OnePiece" alt="">
+        <img class="pagina" src="https://via.placeholder.com/827x1200?text=OnePiece" alt="">
+        <img class="pagina" src="https://via.placeholder.com/827x1200?text=OnePiece" alt="">
+        <img class="pagina" src="https://via.placeholder.com/827x1200?text=OnePiece" alt="">
+        <img class="pagina" src="https://via.placeholder.com/827x1200?text=OnePiece" alt="">
+        <img class="pagina" src="https://via.placeholder.com/827x1200?text=OnePiece" alt="">
+        <img class="pagina" src="https://via.placeholder.com/827x1200?text=OnePiece" alt="">
+        <img class="pagina" src="https://via.placeholder.com/827x1200?text=OnePiece" alt="">
+        <img class="pagina" src="https://via.placeholder.com/827x1200?text=OnePiece" alt="">
+        <img class="pagina" src="https://via.placeholder.com/827x1200?text=OnePiece" alt="">
+        <img class="pagina" src="https://via.placeholder.com/827x1200?text=OnePiece" alt="">
+        <img class="pagina" src="https://via.placeholder.com/827x1200?text=OnePiece" alt="">
+        <img class="pagina" src="https://via.placeholder.com/827x1200?text=OnePiece" alt="">
+        <img class="pagina" src="https://via.placeholder.com/827x1200?text=OnePiece" alt="">
+        <img class="pagina" src="https://via.placeholder.com/827x1200?text=OnePiece" alt="">
+        <img class="pagina" src="https://via.placeholder.com/827x1200?text=OnePiece" alt="">
+        <img class="pagina" src="https://via.placeholder.com/827x1200?text=OnePiece" alt="">
     </main>
 
     <!-- Footer pag sim -->
