--- a/Lenguaje_de_marcas/mangak/mangas/one-piece/cap7.html
+++ b/Lenguaje_de_marcas/mangak/mangas/one-piece/cap7.html
@@ -78,27 +78,29 @@
             <a class="arribaPag" href="#arriba"><i class="fa-solid fa-angle-up"></i></a>
         </section>
 
-        <img class="pagina" id="arriba" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/7/01.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/7/02.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/7/03.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/7/04.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/7/05.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/7/06.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/7/07.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/7/08.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/7/09.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/7/10.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/7/11.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/7/12.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/7/13.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/7/14.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/7/15.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/7/16.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/7/17.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/7/18.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/7/19.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/7/20.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/7/21.jpg" alt="">
+        <img class="pagina" id="arriba" src="https://via.placeholder.com/827x1200?text=OnePiece" alt="">
+        <img class="pagina" src="https://via.placeholder.com/827x1200?text=OnePiece" alt="">
+        <img class="pagina" src="https://via.placeholder.com/827x1200?text=OnePiece" alt="">
+        <img class="pagina" src="https://via.placeholder.com/827x1200?text=OnePiece" alt="">
+        <img class="pagina" src="https://via.placeholder.com/827x1200?text=OnePiece" alt="">
+        <img class="pagina" src="https://via.placeholder.com/827x1200?text=OnePiece" alt="">
+        <img class="pagina" src="https://via.placeholder.com/827x1200?text=OnePiece" alt="">
+        <img class="pagina" src="https://via.placeholder.com/827x1200?text=OnePiece" alt="">
+        <img class="pagina" src="https://via.placeholder.com/827x1200?text=OnePiece" alt="">
+        <img class="pagina" src="https://via.placeholder.com/827x1200?text=OnePiece" alt="">
+        <img class="pagina" src="https://via.placeholder.com/827x1200?text=OnePiece" alt="">
+        <img class="pagina" src="https://via.placeholder.com/827x1200?text=OnePiece" alt="">
+        <img class="pagina" src="https://via.placeholder.com/827x1200?text=OnePiece" alt="">
+        <img class="pagina" src="https://via.placeholder.com/827x1200?text=OnePiece" alt="">
+        <img class="pagina" src="https://via.placeholder.com/827x1200?text=OnePiece" alt="">
+        <img class="pagina" src="https://via.placeholder.com/827x1200?text=OnePiece" alt="">
+        <img class="pagina" src="https://via.placeholder.com/827x1200?text=OnePiece" alt="">
+        <img class="pagina" src="https://via.placeholder.com/827x1200?text=OnePiece" alt="">
+        <img class="pagina" src="https://via.placeholder.com/827x1200?text=OnePiece" alt="">
+        <img class="pagina" src="https://via.placeholder.com/827x1200?text=OnePiece" alt="">
+        <img class="pagina" src="https://via.placeholder.com/827x1200?text=OnePiece" alt="">
+        <img class="pagina" src="https://via.placeholder.com/827x1200?text=OnePiece" alt="">
+        <img class="pagina" src="https://via.placeholder.com/827x1200?text=OnePiece" alt="">
     </main>
 
     <!-- Footer pag sim -->
