--- a/Lenguaje_de_marcas/mangak/mangas/one-piece/cap9.html
+++ b/Lenguaje_de_marcas/mangak/mangas/one-piece/cap9.html
@@ -78,32 +78,29 @@
             <a class="arribaPag" href="#arriba"><i class="fa-solid fa-angle-up"></i></a>
         </section>
 
-        <img class="pagina" id="arriba" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/9/01.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/9/02.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/9/03.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/9/04.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/9/05.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/9/06.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/9/07.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/9/08.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/9/09.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/9/10.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/9/11.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/9/12.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/9/13.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/9/14.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/9/15.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/9/16.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/9/17.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/9/18.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/9/19.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/9/20.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/9/21.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/9/22.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/9/23.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/9/24.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/9/25.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/9/26.jpg" alt="">
+        <img class="pagina" id="arriba" src="https://via.placeholder.com/827x1200?text=OnePiece" alt="">
+        <img class="pagina" src="https://via.placeholder.com/827x1200?text=OnePiece" alt="">
+        <img class="pagina" src="https://via.placeholder.com/827x1200?text=OnePiece" alt="">
+        <img class="pagina" src="https://via.placeholder.com/827x1200?text=OnePiece" alt="">
+        <img class="pagina" src="https://via.placeholder.com/827x1200?text=OnePiece" alt="">
+        <img class="pagina" src="https://via.placeholder.com/827x1200?text=OnePiece" alt="">
+        <img class="pagina" src="https://via.placeholder.com/827x1200?text=OnePiece" alt="">
+        <img class="pagina" src="https://via.placeholder.com/827x1200?text=OnePiece" alt="">
+        <img class="pagina" src="https://via.placeholder.com/827x1200?text=OnePiece" alt="">
+        <img class="pagina" src="https://via.placeholder.com/827x1200?text=OnePiece" alt="">
+        <img class="pagina" src="https://via.placeholder.com/827x1200?text=OnePiece" alt="">
+        <img class="pagina" src="https://via.placeholder.com/827x1200?text=OnePiece" alt="">
+        <img class="pagina" src="https://via.placeholder.com/827x1200?text=OnePiece" alt="">
+        <img class="pagina" src="https://via.placeholder.com/827x1200?text=OnePiece" alt="">
+        <img class="pagina" src="https://via.placeholder.com/827x1200?text=OnePiece" alt="">
+        <img class="pagina" src="https://via.placeholder.com/827x1200?text=OnePiece" alt="">
+        <img class="pagina" src="https://via.placeholder.com/827x1200?text=OnePiece" alt="">
+        <img class="pagina" src="https://via.placeholder.com/827x1200?text=OnePiece" alt="">
+        <img class="pagina" src="https://via.placeholder.com/827x1200?text=OnePiece" alt="">
+        <img class="pagina" src="https://via.placeholder.com/827x1200?text=OnePiece" alt="">
+        <img class="pagina" src="https://via.placeholder.com/827x1200?text=OnePiece" alt="">
+        <img class="pagina" src="https://via.placeholder.com/827x1200?text=OnePiece" alt="">
+        <img class="pagina" src="https://via.placeholder.com/827x1200?text=OnePiece" alt="">
     </main>
 
     <!-- Footer pag sim -->
