--- a/Lenguaje_de_marcas/mangak/mangas/.plantilla/cap10.html
+++ b/Lenguaje_de_marcas/mangak/mangas/.plantilla/cap10.html
@@ -78,29 +78,29 @@
             <a class="arribaPag" href="#arriba"><i class="fa-solid fa-angle-up"></i></a>
         </section>
 
-        <img class="pagina" id="arriba" src="https://via.placeholder.com/827x1200?text=IronLadies" alt="">
-        <img class="pagina" src="https://via.placeholder.com/827x1200?text=IronLadies" alt="">
-        <img class="pagina" src="https://via.placeholder.com/827x1200?text=IronLadies" alt="">
-        <img class="pagina" src="https://via.placeholder.com/827x1200?text=IronLadies" alt="">
-        <img class="pagina" src="https://via.placeholder.com/827x1200?text=IronLadies" alt="">
-        <img class="pagina" src="https://via.placeholder.com/827x1200?text=IronLadies" alt="">
-        <img class="pagina" src="https://via.placeholder.com/827x1200?text=IronLadies" alt="">
-        <img class="pagina" src="https://via.placeholder.com/827x1200?text=IronLadies" alt="">
-        <img class="pagina" src="https://via.placeholder.com/827x1200?text=IronLadies" alt="">
-        <img class="pagina" src="https://via.placeholder.com/827x1200?text=IronLadies" alt="">
-        <img class="pagina" src="https://via.placeholder.com/827x1200?text=IronLadies" alt="">
-        <img class="pagina" src="https://via.placeholder.com/827x1200?text=IronLadies" alt="">
-        <img class="pagina" src="https://via.placeholder.com/827x1200?text=IronLadies" alt="">
-        <img class="pagina" src="https://via.placeholder.com/827x1200?text=IronLadies" alt="">
-        <img class="pagina" src="https://via.placeholder.com/827x1200?text=IronLadies" alt="">
-        <img class="pagina" src="https://via.placeholder.com/827x1200?text=IronLadies" alt="">
-        <img class="pagina" src="https://via.placeholder.com/827x1200?text=IronLadies" alt="">
-        <img class="pagina" src="https://via.placeholder.com/827x1200?text=IronLadies" alt="">
-        <img class="pagina" src="https://via.placeholder.com/827x1200?text=IronLadies" alt="">
-        <img class="pagina" src="https://via.placeholder.com/827x1200?text=IronLadies" alt="">
-        <img class="pagina" src="https://via.placeholder.com/827x1200?text=IronLadies" alt="">
-        <img class="pagina" src="https://via.placeholder.com/827x1200?text=IronLadies" alt="">
-        <img class="pagina" src="https://via.placeholder.com/827x1200?text=IronLadies" alt="">
+        <img class="pagina" id="arriba" src="https://via.placeholder.com/827x1200?text=PRUEBA" alt="">
+        <img class="pagina" src="https://via.placeholder.com/827x1200?text=PRUEBA" alt="">
+        <img class="pagina" src="https://via.placeholder.com/827x1200?text=PRUEBA" alt="">
+        <img class="pagina" src="https://via.placeholder.com/827x1200?text=PRUEBA" alt="">
+        <img class="pagina" src="https://via.placeholder.com/827x1200?text=PRUEBA" alt="">
+        <img class="pagina" src="https://via.placeholder.com/827x1200?text=PRUEBA" alt="">
+        <img class="pagina" src="https://via.placeholder.com/827x1200?text=PRUEBA" alt="">
+        <img class="pagina" src="https://via.placeholder.com/827x1200?text=PRUEBA" alt="">
+        <img class="pagina" src="https://via.placeholder.com/827x1200?text=PRUEBA" alt="">
+        <img class="pagina" src="https://via.placeholder.com/827x1200?text=PRUEBA" alt="">
+        <img class="pagina" src="https://via.placeholder.com/827x1200?text=PRUEBA" alt="">
+        <img class="pagina" src="https://via.placeholder.com/827x1200?text=PRUEBA" alt="">
+        <img class="pagina" src="https://via.placeholder.com/827x1200?text=PRUEBA" alt="">
+        <img class="pagina" src="https://via.placeholder.com/827x1200?text=PRUEBA" alt="">
+        <img class="pagina" src="https://via.placeholder.com/827x1200?text=PRUEBA" alt="">
+        <img class="pagina" src="https://via.placeholder.com/827x1200?text=PRUEBA" alt="">
+        <img class="pagina" src="https://via.placeholder.com/827x1200?text=PRUEBA" alt="">
+        <img class="pagina" src="https://via.placeholder.com/827x1200?text=PRUEBA" alt="">
+        <img class="pagina" src="https://via.placeholder.com/827x1200?text=PRUEBA" alt="">
+        <img class="pagina" src="https://via.placeholder.com/827x1200?text=PRUEBA" alt="">
+        <img class="pagina" src="https://via.placeholder.com/827x1200?text=PRUEBA" alt="">
+        <img class="pagina" src="https://via.placeholder.com/827x1200?text=PRUEBA" alt="">
+        <img class="pagina" src="https://via.placeholder.com/827x1200?text=PRUEBA" alt="">
         
     </main>
 
