--- a/Lenguaje_de_marcas/mangak/index.html
+++ b/Lenguaje_de_marcas/mangak/index.html
@@ -15,7 +15,7 @@
 
         <!-- Titulo / header -->
         <header>
-            <h1 id="inicioPagina" class="neonText">MANGAK</h1>
+            <h1 id="inicioPagina" class="neonText"><a href="index.html">MANGAK</a></h1>
             <p>"Just relax and read "</p>
 
             <!-- Desgradado debajo del label -->
@@ -347,7 +347,7 @@
 
             <article id="shounen">
                 <h4>Black Butler</h4>
-                <a href="">
+                <a href="mangas/black-butler/front.html">
                     <img id="PORTADAS" src="images/portadas/black-butler.jpg" alt="">
                 </a>
             </article>
@@ -361,7 +361,7 @@
 
             <article id="seinen">
                 <h4>Tsuyokute New Saga</h4>
-                <a href="mangas/">
+                <a href="mangas/tsuyokute-new-saga/front.html">
                     <img id="PORTADAS" src="images/portadas/tsuyokute-new-saga.jpg" alt="">
                 </a>
             </article>
@@ -492,7 +492,14 @@
                 </a>
             </article>
    
-            <!-- [1][2][3]... -->
+            <!-- Pag Navigation [1][2][3]... -->
+            <nav class="pagNavegation">
+                <ul>
+                    <li><a href="index.html">1</a></li>
+                    <li><a href="error.html">2</a></li>
+                    <li><a href="">3</a></li>
+                </ul>
+            </nav>
 
         </main>
 
@@ -521,7 +528,7 @@
             <article id="siguenos">
                 <h4>Siguenos</h4>
                 <a href="#"><img src="images/iconos/facebookIcon.png" alt=""></a>
-                <a href="#"><img src="images/iconos/twitterIcon.png" alt=""></a>
+                <a href="https://twitter.com/mangakwy"><img src="images/iconos/twitterIcon.png" alt=""></a>
                 <a href="#"><img src="images/iconos/InstagramIcon.png" alt=""></a>
                 <a href="#"><img src="images/iconos/discrodIcon.png" alt=""></a>
             </article>
