--- a/Lenguaje_de_marcas/mangak/mangas/berserk/front.html
+++ b/Lenguaje_de_marcas/mangak/mangas/berserk/front.html
@@ -96,65 +96,57 @@
         </article>
 
         <!-- Etiquetas -->
-        <!-- 
-                <a href=""><i class="fas fa-tags"></i> Acción</a>
-                <a href=""><i class="fas fa-tags"></i> Aventura</a> 
-                <a href=""><i class="fas fa-tags"></i> Comedia</a> 
-                <a href=""><i class="fas fa-tags"></i> Drama</a> 
-                <a href=""><i class="fas fa-tags"></i> Recuentos de la vida</a>  
-                <a href=""><i class="fas fa-tags"></i> Ecchi</a> 
-                <a href=""><i class="fas fa-tags"></i> Fantasia</a> 
-                <a href=""><i class="fas fa-tags"></i> Magia</a> 
-                <a href=""><i class="fas fa-tags"></i> Sobrenatural</a> 
-                <a href=""><i class="fas fa-tags"></i> Horror</a> 
-                <a href=""><i class="fas fa-tags"></i> Misterio</a> 
-                <a href=""><i class="fas fa-tags"></i> Psicológico</a> 
-                <a href=""><i class="fas fa-tags"></i> Romance</a> 
-                <a href=""><i class="fas fa-tags"></i> Ciencia Ficción</a>  
-                <a href=""><i class="fas fa-tags"></i> Thriller</a> 
-                <a href=""><i class="fas fa-tags"></i> Deporte</a> 
-                <a href=""><i class="fas fa-tags"></i> Harem</a> 
-                <a href=""><i class="fas fa-tags"></i> Mecha</a> 
-                <a href=""><i class="fas fa-tags"></i> Supervivencia</a> 
-                <a href=""><i class="fas fa-tags"></i> Reencarnación</a> 
-                <a href=""><i class="fas fa-tags"></i> Gore</a> 
-                <a href=""><i class="fas fa-tags"></i> Apocalíptico</a> 
-                <a href=""><i class="fas fa-tags"></i> Tragedia</a> 
-                <a href=""><i class="fas fa-tags"></i> Vida Escolar</a>  
-                <a href=""><i class="fas fa-tags"></i> Historia</a> 
-                <a href=""><i class="fas fa-tags"></i> Militar</a> 
-                <a href=""><i class="fas fa-tags"></i> Policiaco</a> 
-                <a href=""><i class="fas fa-tags"></i> Crimen</a> 
-                <a href=""><i class="fas fa-tags"></i> Superpoderes</a> 
-                <a href=""><i class="fas fa-tags"></i> Vampiros</a> 
-                <a href=""><i class="fas fa-tags"></i> Artes Marciales</a>  
-                <a href=""><i class="fas fa-tags"></i> Samurái</a> 
-                <a href=""><i class="fas fa-tags"></i> Realidad Virtual</a>  
-                <a href=""><i class="fas fa-tags"></i> Ciberpunk</a> 
-                <a href=""><i class="fas fa-tags"></i> Musica</a> 
-                <a href=""><i class="fas fa-tags"></i> Parodia</a> 
-                <a href=""><i class="fas fa-tags"></i> Animación</a> 
-                <a href=""><i class="fas fa-tags"></i> Demonios</a> 
-                <a href=""><i class="fas fa-tags"></i> Familia</a> 
-                <a href=""><i class="fas fa-tags"></i> Extranjero</a> 
-                <a href=""><i class="fas fa-tags"></i> Niños</a> 
-                <a href=""><i class="fas fa-tags"></i> Realidad</a> 
-                <a href=""><i class="fas fa-tags"></i> Telenovela</a> 
-                <a href=""><i class="fas fa-tags"></i> Guerra</a> 
-                <a href=""><i class="fas fa-tags"></i> Oeste</a> 
-                <a href=""><i class="fas fa-tags"></i> Traps</a>
-            -->
-
         <article class="etiquetas">
             <h2>Etiquetas</h2>
-            <a href=""><i class="fas fa-tags"></i> Acción</a>
-            <a href=""><i class="fas fa-tags"></i> Aventura</a>
-            <a href=""><i class="fas fa-tags"></i> Comedia</a>
-            <a href=""><i class="fas fa-tags"></i> Drama</a>
-            <a href=""><i class="fas fa-tags"></i> Fantasia</a>
-            <a href=""><i class="fas fa-tags"></i> Artes Marciales</a>
+                <!-- <a href=""><i class="fas fa-tags"></i> Acción</a> -->
+                <!-- <a href=""><i class="fas fa-tags"></i> Aventura</a>  -->
+                <!-- <a href=""><i class="fas fa-tags"></i> Comedia</a>  -->
+                <!-- <a href=""><i class="fas fa-tags"></i> Drama</a>  -->
+                <!-- <a href=""><i class="fas fa-tags"></i> Recuentos de la vida</a>   -->
+                <!-- <a href=""><i class="fas fa-tags"></i> Ecchi</a>  -->
+                <!-- <a href=""><i class="fas fa-tags"></i> Fantasia</a>  -->
+                <!-- <a href=""><i class="fas fa-tags"></i> Magia</a>  -->
+                <!-- <a href=""><i class="fas fa-tags"></i> Sobrenatural</a>  -->
+                <!-- <a href=""><i class="fas fa-tags"></i> Horror</a>  -->
+                <!-- <a href=""><i class="fas fa-tags"></i> Misterio</a>  -->
+                <!-- <a href=""><i class="fas fa-tags"></i> Psicológico</a>  -->
+                <!-- <a href=""><i class="fas fa-tags"></i> Romance</a>  -->
+                <!-- <a href=""><i class="fas fa-tags"></i> Ciencia Ficción</a>   -->
+                <!-- <a href=""><i class="fas fa-tags"></i> Thriller</a>  -->
+                <!-- <a href=""><i class="fas fa-tags"></i> Deporte</a>  -->
+                <!-- <a href=""><i class="fas fa-tags"></i> Harem</a>  -->
+                <!-- <a href=""><i class="fas fa-tags"></i> Mecha</a>  -->
+                <!-- <a href=""><i class="fas fa-tags"></i> Supervivencia</a>  -->
+                <!-- <a href=""><i class="fas fa-tags"></i> Reencarnación</a>  -->
+                <!-- <a href=""><i class="fas fa-tags"></i> Gore</a>  -->
+                <!-- <a href=""><i class="fas fa-tags"></i> Apocalíptico</a>  -->
+                <!-- <a href=""><i class="fas fa-tags"></i> Tragedia</a>  -->
+                <!-- <a href=""><i class="fas fa-tags"></i> Vida Escolar</a>   -->
+                <!-- <a href=""><i class="fas fa-tags"></i> Historia</a>  -->
+                <!-- <a href=""><i class="fas fa-tags"></i> Militar</a>  -->
+                <!-- <a href=""><i class="fas fa-tags"></i> Policiaco</a>  -->
+                <!-- <a href=""><i class="fas fa-tags"></i> Crimen</a>  -->
+                <!-- <a href=""><i class="fas fa-tags"></i> Superpoderes</a>  -->
+                <!-- <a href=""><i class="fas fa-tags"></i> Vampiros</a>  -->
+                <!-- <a href=""><i class="fas fa-tags"></i> Artes Marciales</a>   -->
+                <!-- <a href=""><i class="fas fa-tags"></i> Samurái</a>  -->
+                <!-- <a href=""><i class="fas fa-tags"></i> Realidad Virtual</a>   -->
+                <!-- <a href=""><i class="fas fa-tags"></i> Ciberpunk</a>  -->
+                <!-- <a href=""><i class="fas fa-tags"></i> Musica</a>  -->
+                <!-- <a href=""><i class="fas fa-tags"></i> Parodia</a>  -->
+                <!-- <a href=""><i class="fas fa-tags"></i> Animación</a>  -->
+                <!-- <a href=""><i class="fas fa-tags"></i> Demonios</a>  -->
+                <!-- <a href=""><i class="fas fa-tags"></i> Familia</a>  -->
+                <!-- <a href=""><i class="fas fa-tags"></i> Extranjero</a>  -->
+                <!-- <a href=""><i class="fas fa-tags"></i> Niños</a>  -->
+                <!-- <a href=""><i class="fas fa-tags"></i> Realidad</a>  -->
+                <!-- <a href=""><i class="fas fa-tags"></i> Telenovela</a>  -->
+                <!-- <a href=""><i class="fas fa-tags"></i> Guerra</a>  -->
+                <!-- <a href=""><i class="fas fa-tags"></i> Oeste</a>  -->
+                <!-- <a href=""><i class="fas fa-tags"></i> Traps</a> -->
 
         </article>
+
 
         <section class="userZone">
             <article class="userManagement">
