--- a/Lenguaje_de_marcas/mangak/error.html
+++ b/Lenguaje_de_marcas/mangak/error.html
@@ -24,7 +24,7 @@
     <section>
         <h1>ERROR!</h1>
         <p>What is the error?</p>
-        <p>Web:</p>
+        <p>Website:</p>
         <img src="https://media.tenor.com/VNj0eJnLplgAAAAM/elmo-shrug.gif" alt="">
     </section>
 </main>
