--- a/Lenguaje_de_marcas/mangak/index.html
+++ b/Lenguaje_de_marcas/mangak/index.html
@@ -438,56 +438,56 @@
 
             <article id="seinen">
                 <h4>Kill The Hero</h4>
-                <a href="">
+                <a href="mangas/">
                     <img id="PORTADAS" src="images/portadas/kill-the-hero.jpg" alt="">
                 </a>
             </article>
 
             <article id="seinen">
                 <h4>Iron Ladies: Saint Tooka</h4>
-                <a href="">
+                <a href="mangas/">
                     <img id="PORTADAS" src="images/portadas/iron-ladies:-saint-tooka.jpg" alt="">
                 </a>
             </article>
 
             <article id="seinen">
                 <h4>Boku No Hero Academia</h4>
-                <a href="">
+                <a href="mangas/">
                     <img id="PORTADAS" src="images/portadas/boku-no-hero-academia.jpg" alt="">
                 </a>
             </article>
 
             <article id="seinen">
                 <h4>Pale Throne</h4>
-                <a href="">
+                <a href="mangas/">
                     <img id="PORTADAS" src="images/portadas/pale-throne.jpg" alt="">
                 </a>
             </article>
 
             <article id="seinen">
                 <h4>Crimson Grimoire</h4>
-                <a href="">
+                <a href="mangas/">
                     <img id="PORTADAS" src="images/portadas/crimson-grimoire.jpg" alt="">
                 </a>
             </article>
 
             <article id="seinen">
                 <h4>Dr. Stone</h4>
-                <a href="">
+                <a href="mangas/">
                     <img id="PORTADAS" src="images/portadas/dr-stone.jpg" alt="">
                 </a>
             </article>
 
             <article id="seinen">
                 <h4>Gokutei Higuma</h4>
-                <a href="">
+                <a href="mangas/">
                     <img id="PORTADAS" src="images/portadas/gokutei-higuma.jpg" alt="">
                 </a>
             </article>
 
             <article id="seinen">
                 <h4>Isekai Tensei Soudouki</h4>
-                <a href="">
+                <a href="mangas/">
                     <img id="PORTADAS" src="images/portadas/isekai-tensei-soudouki.jpg" alt="">
                 </a>
             </article>
