--- a/Lenguaje_de_marcas/mangak/error copy.html
+++ b/Lenguaje_de_marcas/mangak/error copy.html
@@ -5,7 +5,7 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>MangaK</title>
-        <link rel="stylesheet" href="styles/error.css"/>
+        <link rel="stylesheet" href="styles/style.css"/>
         <link rel="icon" href="images/iconos/icon.ico" type="ico">
         <link href='https://fonts.googleapis.com/css?family=Sacramento' rel='stylesheet'>
         <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css" rel="stylesheet">
