--- a/Lenguaje_de_marcas/mangak/loggin.html
+++ b/Lenguaje_de_marcas/mangak/loggin.html
@@ -1,91 +1,86 @@
 <!DOCTYPE html>
 <html lang="es">
-    <head>
-        <meta charset="UTF-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>MangaK Logging</title>
-        <link rel="stylesheet" href="styles/style.css"/>
-        <link rel="stylesheet" href="styles/formulario.css">
-        <link rel="icon" href="images/iconos/icon.ico" type="ico">
-        <link href='https://fonts.googleapis.com/css?family=Sacramento' rel='stylesheet'>
-        <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css" rel="stylesheet">
-    </head>
 
-    <body>
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>MangaK Logging</title>
+    <link rel="stylesheet" href="styles/style.css" />
+    <link rel="stylesheet" href="styles/formulario.css">
+    <link rel="icon" href="images/iconos/icon.ico" type="ico">
+    <link href='https://fonts.googleapis.com/css?family=Sacramento' rel='stylesheet'>
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css" rel="stylesheet">
+</head>
 
-        <!-- Titulo / header -->
-        <header>
-            <h1 id="inicioPagina" class="neonText"><a href="index.html">Logging</a></h1>
-            <p>"Inicia sesion en la pagina o crea perfil"</p>
-        </header>
+<body>
+
+    <!-- Titulo / header -->
+    <header>
+        <h1 id="inicioPagina" class="neonText"><a href="index.html">Logging</a></h1>
+        <p>"Inicia sesion en la pagina o crea perfil"</p>
+    </header>
 
 
 
+    <div class="contenedor">
+        <h1>Iniciar Sesión</h1>
         <form class="formulario" action="/login" method="post">
-            <label for="username">Usuario:</label>
-            <input type="text" id="username"  pattern="[a-zA-Z0-9]{2,12}" name="username" required><br><br>
-            <label for="password">Contraseña:</label>
-            <input type="password" id="password" name="password" required><br><br>
+
+            <!-- nombre usuario -->
+            <input id="username" type="text" placeholder="Usuario" name="username" required>
+
+            <!-- contraseña -->
+            <input id="password" type="password" placeholder="Contraseña" name="password" required>
+
+            <!-- inicio sesion -->
             <input type="submit" value="Iniciar Sesión">
-          </form>
+        </form>
+        <p id="textoFormulario">No tienes cuenta? <a id="signIn" href="signIn.html"> Regístrate</a></p>
+    </div>
 
 
 
+    <!-- Footer pag sim -->
+    <footer>
+        <article id="website">
+            <h4>Website</h4>
+            <ul>
+                <li><a href="#">Sobre nosotros</a></li>
+                <li><a href="#">Nuestros servicios</a></li>
+                <li><a href="#">Politica de privacidad</a></li>
+            </ul>
+        </article>
 
+        <article id="explorar">
+            <h4>Exploral</h4>
+            <ul>
+                <li><a href="#">Biblioteca</a></li>
+                <li><a href="#">Grupos</a></li>
+                <li><a href="#">returns</a></li>
+                <li><a href="#">order status</a></li>
+            </ul>
+        </article>
 
+        <article id="siguenos">
+            <h4>Siguenos</h4>
+            <a href="#"><img src="images/iconos/facebookIcon.png" alt=""></a>
+            <a href="#"><img src="images/iconos/twitterIcon.png" alt=""></a>
+            <a href="#"><img src="images/iconos/InstagramIcon.png" alt=""></a>
+            <a href="#"><img src="images/iconos/discrodIcon.png" alt=""></a>
+        </article>
 
+        <article id="contenido">
+            <h4>Contenidos</h4>
+            <p>
+                MangaK no realiza las traducciones aquí publicadas y solo es un repositorio con visor propio para que se
+                puedan leer de forma comoda las obras.
+            </p>
+        </article>
+        <!-- copyright -->
+        <article id="copyright">&copy; 2022 MangaK</article>
 
-
-
-
-
-
-
-
-
-
-
-
-        <!-- Footer pag sim -->
-        <footer>
-            <article id="website">
-                <h4>Website</h4>
-                <ul>
-                    <li><a href="#">Sobre nosotros</a></li>
-                    <li><a href="#">Nuestros servicios</a></li>
-                    <li><a href="#">Politica de privacidad</a></li>
-                </ul>
-            </article>
-
-            <article id="explorar">
-                <h4>Exploral</h4>
-                <ul>
-                    <li><a href="#">Biblioteca</a></li>
-                    <li><a href="#">Grupos</a></li>
-                    <li><a href="#">returns</a></li>
-                    <li><a href="#">order status</a></li>
-                </ul>
-            </article>
-            
-            <article id="siguenos">
-                <h4>Siguenos</h4>
-                <a href="#"><img src="images/iconos/facebookIcon.png" alt=""></a>
-                <a href="#"><img src="images/iconos/twitterIcon.png" alt=""></a>
-                <a href="#"><img src="images/iconos/InstagramIcon.png" alt=""></a>
-                <a href="#"><img src="images/iconos/discrodIcon.png" alt=""></a>
-            </article>
-
-            <article id="contenido">
-                <h4>Contenidos</h4>
-                <p>
-                    MangaK no realiza las traducciones aquí publicadas y solo es un repositorio con visor propio para que se puedan leer de forma comoda las obras.
-                </p>
-            </article>
-            <!-- copyright -->
-            <article id="copyright">&copy; 2022 MangaK</article>
-
-        </footer>
-    </body>
+    </footer>
+</body>
 
 </html>
