inicio sesion implement m+ things

--- a/Lenguaje_de_marcas/mangak/index.html
+++ b/Lenguaje_de_marcas/mangak/index.html
@@ -134,7 +134,7 @@
                 </section>
 
                 
-                <li id="loggin"><a href="loggin.html">Loggin</a></li>
+                <li id="loggin"><a href="loggin.html">Login</a></li>
                 <li id="logout"><a href="error.html">Logout</a></li>
             </ul>
         </nav>
