--- a/Lenguaje_de_marcas/mangak/loggin.html
+++ b/Lenguaje_de_marcas/mangak/loggin.html
@@ -25,7 +25,7 @@
 
     <div class="contenedor">
         <h1>Iniciar Sesión</h1>
-        <form class="formulario" action="/login" method="post">
+        <form action="/login">
 
             <!-- nombre usuario -->
             <input id="username" type="text" placeholder="Usuario" name="username" required>
