--- a/Lenguaje_de_marcas/mangak/signIn.html
+++ b/Lenguaje_de_marcas/mangak/signIn.html
@@ -24,26 +24,45 @@
 
     <div class="contenedor">
         <h1>Registrarse</h1>
-        <form class="formulario" action="/registro" method="post">
+        <form action="/registro">
 
             <!-- nombre usuario -->
-            <input type="text" id="username" placeholder="Usuario" name="username" 
-                pattern="[a-zA-Z0-9\-_]{3,16}" required>
 
-            <p class="prueba">Patron de nombre de usuario incorrecta</p>
+
+            <input type="text" id="username" placeholder="Usuario" name="username" pattern="[a-zA-Z0-9\-_]{3,16}"
+                required autocomplete="off">
+
+
+
+            <p class="aviso" id="avisoUsername">El nombre debe tener entre 3 y 16 caracteres alfanuméricos, guiones (-)
+                y/o guiones bajos (_)</p>
+
 
             <!-- email -->
             <input type="email" id="email" placeholder="Correo electrónico" name="email" required>
 
+            <p class="aviso" id="avisoEmail">Por favor, ingrese una dirección de correo electrónico válida. La dirección
+                de correo electrónico debe tener el formato usuario@dominio.com y no puede contener espacios en blanco
+            </p>
+
             <!-- Contraseña -->
             <input type="password" id="password" placeholder="Contraseña" name="password"
                 pattern="(?=.*[a-z])(?=.*[A-Z])(?=.*\d)(?=.*[#$@!%&*?])(?!.*\s)[a-zA-Z\d#$@!%&*?]{8,16}" required>
-            
+
+            <p class="aviso" id="avisoPassword">La contraseña debe tener entre 8 y 16 caracteres y contener al menos una
+                letra mayúscula, una letra minúscula, un número y un carácter especial (#$@!%&*?). No se permiten
+                espacios en blanco</p>
 
             <!-- Repetir contraseña -->
-            <input type="password" id="password" placeholder="Contraseña" name="password"
+            <input type="password" id="passwordRepit" placeholder="Repite Contraseña" name="passwordRepit"
                 pattern="(?=.*[a-z])(?=.*[A-Z])(?=.*\d)(?=.*[#$@!%&*?])(?!.*\s)[a-zA-Z\d#$@!%&*?]{8,16}" required>
 
+            <p class="aviso" id="avisoPasswordRepit">Repita la contraseña introducida</p>
+
+
+            <input type="checkbox" name="notificacion" id="notificacion">
+            <p>Recivir notificaciones de Mangak</p>
+            
             <!-- Boton de regustro -->
             <input type="submit" value="Registrarse">
         </form>
