--- a/Lenguaje_de_marcas/mangak/signIn.html
+++ b/Lenguaje_de_marcas/mangak/signIn.html
@@ -39,7 +39,7 @@
 
 
             <!-- email -->
-            <input type="email" id="email" placeholder="Correo electrónico" name="email" required>
+            <input type="email" id="email" placeholder="Correo electrónico" name="email" required autocomplete="off">
 
             <p class="aviso" id="avisoEmail">Por favor, ingrese una dirección de correo electrónico válida. La dirección
                 de correo electrónico debe tener el formato usuario@dominio.com y no puede contener espacios en blanco
@@ -61,8 +61,8 @@
 
 
             <input type="checkbox" name="notificacion" id="notificacion">
-            <p>Recivir notificaciones de Mangak</p>
-            
+            <p id="notificacionTexto">Recivir notificaciones de Mangak</p>
+
             <!-- Boton de regustro -->
             <input type="submit" value="Registrarse">
         </form>
