--- a/Lenguaje_de_marcas/mangak/footerContent/aboutUs.html
+++ b/Lenguaje_de_marcas/mangak/footerContent/aboutUs.html
@@ -5,10 +5,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ERROR!</title>
-    <link rel="stylesheet" href="styles/error.css" />
-    <link rel="stylesheet" href="styles/style.css">
-    <link rel="icon" href="images/iconos/icon.ico" type="ico">
+    <title>About Us</title>
+    <link rel="stylesheet" href="../styles/style.css">
+    <link rel="stylesheet" href="../styles/aboutUs.css">
+    <link rel="icon" href="../images/iconos/icon.ico" type="ico">
     <link href='https://fonts.googleapis.com/css?family=Sacramento' rel='stylesheet'>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css" rel="stylesheet">
 </head>
@@ -17,18 +17,30 @@
 
     <!-- Titulo / header -->
     <header>
-        <h1 id="inicioPagina" class="neonText"><a href="index.html">ERROR!</a></h1>
+        <h1 id="inicioPagina" class="neonText"><a href="index.html">About Us</a></h1>
         <p>"Return to menu"</p>
     </header>
 
 
-    <main class="error">
+    <main class="aboutUs">
         <section>
-            <h1>ERROR!</h1>
-            <p>What is the error?</p>
-            <p>Website:</p>
-            <img src="https://media.tenor.com/VNj0eJnLplgAAAAM/elmo-shrug.gif" alt="">
+            <h1>Sobre MangaK</h1>
+            <p>Tumangaonline nació con el propósito de ofrecer una experiencia nueva y más completa que los actuales
+                visores
+                web de manga, revolucionando el actual concepto de visor desde su creación en junio de 2014 gracias a la
+                colaboración y el apoyo de usuarios y scanlation.</p>
+            <p>
+                En TuMangaOnline podrás encontrar traducciones fanmade y creaciones personales de distintos usuarios
+                especialmente de habla hispana, los cuales han publicado de forma libre y desinteresada para que puedan
+                ser
+                disfrutadas por la comunidad del todo el mundo y en cualquier idioma.
+            </p>
+            <p>
+                Puedes contactar con nosotros a traves de nuestro formulario de contacto e intentaremos responderte lo
+                antes
+                posible</p>
         </section>
+
     </main>
 
 
@@ -55,10 +67,10 @@
 
         <article id="siguenos">
             <h4>Siguenos</h4>
-            <a href="#"><img src="images/iconos/facebookIcon.png" alt=""></a>
-            <a href="#"><img src="images/iconos/twitterIcon.png" alt=""></a>
-            <a href="#"><img src="images/iconos/InstagramIcon.png" alt=""></a>
-            <a href="#"><img src="images/iconos/discrodIcon.png" alt=""></a>
+            <a href="#"><img src="../images/iconos/facebookIcon.png" alt=""></a>
+            <a href="#"><img src="../images/iconos/twitterIcon.png" alt=""></a>
+            <a href="#"><img src="../images/iconos/InstagramIcon.png" alt=""></a>
+            <a href="#"><img src="../images/iconos/discrodIcon.png" alt=""></a>
         </article>
 
         <article id="contenido">
