--- a/Lenguaje_de_marcas/mangak/index.html
+++ b/Lenguaje_de_marcas/mangak/index.html
@@ -510,7 +510,7 @@
             <article id="website">
                 <h4>Website</h4>
                 <ul>
-                    <li><a href="error.html">Sobre nosotros</a></li>
+                    <li><a href="footerContent/aboutUs.html">Sobre nosotros</a></li>
                     <li><a href="error.html">Nuestros servicios</a></li>
                     <li><a href="error.html">Politica de privacidad</a></li>
                 </ul>
