--- a/Lenguaje_de_marcas/mangak/loggin.html
+++ b/Lenguaje_de_marcas/mangak/loggin.html
@@ -18,7 +18,7 @@
     <!-- Titulo / header -->
     <header>
         <h1 id="inicioPagina" class="neonText"><a href="index.html">Logging</a></h1>
-        <p>"Inicia sesion en la pagina o crea perfil"</p>
+        <p>"Inicia sesion en la pagina"</p>
     </header>
 
 
