--- a/Lenguaje_de_marcas/mangak/signIn.html
+++ b/Lenguaje_de_marcas/mangak/signIn.html
@@ -79,8 +79,9 @@
     <article class="valido">
         <article>
             <h1>Registro completado</h1>
-            <p>El usuario <span id="nombreUsuario"></span> se registró de forma correcta.</p>
+            <p>El usuario "<span id="nombreUsuario"></span>" se registró de forma correcta.</p>
             <p id="jsonContainer"></p>
+            <a href="loggin.html">Inicia sesión</a>
         </article>
 
     </article>
