--- a/Lenguaje_de_marcas/mangak/navContent/new.html
+++ b/Lenguaje_de_marcas/mangak/navContent/new.html
@@ -143,9 +143,373 @@
         </ul>
     </nav>
 
-    <main class="new">
+
+    <!-- ASIDE -->
+    <aside>
+        <!-- TOP SEMANAL -->
+        <ul>
+            <h3>Top Semanal</h3>
+
+            <!-- Corona -->
+            <img id="corona" src="../images/iconos/topcrownAmarillo.png" alt="">
+
+            <li>
+                <a id="textoTop" href="">Top 1</a>
+                <a href="mangas/berserk/front.html">
+                    <img id="top1" src="../images/portadas/berserk.jpg" alt="">
+                </a>
+            </li>
+
+            <li>
+                <a id="textoTop" href="">Top 2</a>
+                <a href="mangas/fire-punch/front.html">
+                    <img id="top2" src="../images/portadas/fire-punch.jpg" alt="">
+                </a>
+            </li>
+
+            <li>
+                <a id="textoTop" href="">Top 3</a>
+                <a href="">
+                    <img id="top3" src="../images/portadas/solo-leveling.jpg" alt="">
+                </a>
+            </li>
+
+            <li>
+                <a id="textoTop" href="">Top 4</a>
+                <a href="">
+                    <img id="top" src="../images/portadas/spy-x-family.jpg" alt="">
+                </a>
+            </li>
+
+            <li>
+                <a id="textoTop" href="">Top 5</a>
+                <a href="">
+                    <img id="top" src="../images/portadas/naruto.jpg" alt="">
+                </a>
+            </li>
+
+            <li>
+                <a id="textoTop" href="">Top 6</a>
+                <a href="">
+                    <img id="top" src="../images/portadas/komi-san-wa-komyushou-desu.jpg" alt="">
+                </a>
+            </li>
+
+            <li>
+                <a id="textoTop" href="">Top 7</a>
+                <a href="">
+                    <img id="top" src="../images/portadas/iron-ladies.jpg" alt="">
+                </a>
+            </li>
+
+            <li>
+                <a id="textoTop" href="">Top 8</a>
+                <a href="">
+                    <img id="top" src="../images/portadas/fullmetal-alchemist.jpg" alt="">
+                </a>
+            </li>
+
+            <li>
+                <a id="textoTop" href="">Top 9</a>
+                <a href="">
+                    <img id="top" src="../images/portadas/gokurakugai.jpg" alt="">
+                </a>
+            </li>
+
+            <li>
+                <a id="textoTop" href="">Top 10</a>
+                <a href="">
+                    <img id="top" src="../images/portadas/freaks.jpg" alt="">
+                </a>
+            </li>
 
 
+        </ul>
+
+
+
+        <!-- TOP MENSUAL -->
+        <ul>
+            <h3>Top Mensual</h3>
+
+            <!-- Corona -->
+            <img id="corona" src="../images/iconos/topcrownAmarillo.png" alt="">
+
+            <li>
+                <a id="textoTop" href="">Top 1</a>
+                <a href="mangas/berserk/front.html">
+                    <img id="top1" src="../images/portadas/berserk.jpg" alt="">
+                </a>
+            </li>
+
+            <li>
+                <a id="textoTop" href="">Top 2</a>
+                <a href="mangas/fire-punch/front.html">
+                    <img id="top2" src="../images/portadas/fire-punch.jpg" alt="">
+                </a>
+            </li>
+
+            <li>
+                <a id="textoTop" href="">Top 3</a>
+                <a href="">
+                    <img id="top3" src="../images/portadas/solo-leveling.jpg" alt="">
+                </a>
+            </li>
+
+            <li>
+                <a id="textoTop" href="">Top 4</a>
+                <a href="">
+                    <img id="top" src="../images/portadas/spy-x-family.jpg" alt="">
+                </a>
+            </li>
+
+            <li>
+                <a id="textoTop" href="">Top 5</a>
+                <a href="">
+                    <img id="top" src="../images/portadas/naruto.jpg" alt="">
+                </a>
+            </li>
+
+            <li>
+                <a id="textoTop" href="">Top 6</a>
+                <a href="">
+                    <img id="top" src="../images/portadas/komi-san-wa-komyushou-desu.jpg" alt="">
+                </a>
+            </li>
+
+            <li>
+                <a id="textoTop" href="">Top 7</a>
+                <a href="">
+                    <img id="top" src="../images/portadas/iron-ladies.jpg" alt="">
+                </a>
+            </li>
+
+            <li>
+                <a id="textoTop" href="">Top 8</a>
+                <a href="">
+                    <img id="top" src="../images/portadas/fullmetal-alchemist.jpg" alt="">
+                </a>
+            </li>
+
+            <li>
+                <a id="textoTop" href="">Top 9</a>
+                <a href="">
+                    <img id="top" src="../images/portadas/gokurakugai.jpg" alt="">
+                </a>
+            </li>
+
+            <li>
+                <a id="textoTop" href="">Top 10</a>
+                <a href="">
+                    <img id="top" src="../images/portadas/freaks.jpg" alt="">
+                </a>
+            </li>
+
+
+        </ul>
+
+    </aside>
+
+
+
+    <!-- Main / portadas de mangas -->
+    <main>
+        <!-- 
+                 - Border type identificator -
+
+                id="kodomo"     -para niños pequeños
+                id="shonen"     -para chicos adolescentes
+                id="shojo"      -para chicas adolescentes
+                id="seinen"     -para hombres jobenes y adultos
+                id="josei"      -para mujeres jovenes y adultos
+            
+                <article id="seinen">
+                    <h4>nombre</h4>
+                    <a href="">
+                        <img id="PORTADAS" src="../images/" alt="">
+                    </a>
+                </article>
+             -->
+        <article id="seinen">
+            <h4>The Lone Necromancer</h4>
+            <a href="mangas/">
+                <img id="PORTADAS" src="../images/portadas/the-lone-necromancer.jpg" alt="">
+            </a>
+        </article>
+
+        <article id="seinen">
+            <h4>Youjo Senki</h4>
+            <a href="mangas/">
+                <img id="PORTADAS" src="../images/portadas/youjo-senki.jpg" alt="">
+            </a>
+        </article>
+
+        <article id="seinen">
+            <h4>Nanatsu No Taizai</h4>
+            <a href="mangas/one-piece/front.html">
+                <img id="PORTADAS" src="../images/portadas/nanatsu-no-taizai.jpg" alt="" href>
+            </a>
+        </article>
+
+        <article id="seinen">
+            <h4>Dragon Ball</h4>
+            <a href="mangas/">
+                <img id="PORTADAS" src="../images/portadas/dragon-ball.jpg" alt="">
+            </a>
+        </article>
+
+        <article id="kodomo">
+            <h4>Boku No Hero Academia</h4>
+            <a href="mangas/spy-x-family/front.html">
+                <img id="PORTADAS" src="../images/portadas/boku-no-hero-academia.jpg" alt="">
+            </a>
+        </article>
+
+        <article id="shojo">
+            <h4>Isekai Tensei Soudouki</h4>
+            <a href="mangas/berserk/front.html">
+                <img id="PORTADAS" src="../images/portadas/isekai-tensei-soudouki.jpg" alt="">
+            </a>
+        </article>
+
+        <article id="seinen">
+            <h4>Blue Lock</h4>
+            <a href="mangas/crunch/front.html">
+                <img id="PORTADAS" src="../images/portadas/blue-lock.jpg" alt="">
+            </a>
+        </article>
+
+        <article id="seinen">
+            <h4>Maou No Utsuva</h4>
+            <a href="mangas/">
+                <img id="PORTADAS" src="../images/portadas/maou-no-utsuva.jpg" alt="">
+            </a>
+        </article>
+
+        <article id="seinen">
+            <h4>Chainsaw Man</h4>
+            <a href="mangas/houseki-no-kuni/front.html">
+                <img id="PORTADAS" src="../images/portadas/chainsaw-man.jpg" alt="">
+            </a>
+        </article>
+
+        <article id="shounen">
+            <h4>Black Butler</h4>
+            <a href="mangas/black-butler/front.html">
+                <img id="PORTADAS" src="../images/portadas/black-butler.jpg" alt="">
+            </a>
+        </article>
+
+        <article id="seinen">
+            <h4>Naruto</h4>
+            <a href="mangas/iron-ladies/front.html">
+                <img id="PORTADAS" src="../images/portadas/naruto.jpg" alt="">
+            </a>
+        </article>
+
+        <article id="seinen">
+            <h4>Deathpool Samurai</h4>
+            <a href="mangas/tsuyokute-new-saga/front.html">
+                <img id="PORTADAS" src="../images/portadas/deadpool-samurai.jpg" alt="">
+            </a>
+        </article>
+
+        <article id="seinen">
+            <h4>The Prommised Neverland</h4>
+            <a href="mangas/chainsaw-man/front.html">
+                <img id="PORTADAS" src="../images/portadas/the-prommised-neverland.jpg" alt="">
+            </a>
+        </article>
+
+        <article id="seinen">
+            <h4>Save Me</h4>
+            <a href="mangas/black-clover/front.html">
+                <img id="PORTADAS" src="../images/portadas/save-me.jpg" alt="">
+            </a>
+        </article>
+
+        <article id="seinen">
+            <h4>Mushoku Tensei:Isekai Ittara Honki Dasu</h4>
+            <a href="mangas/fire-punch/front.html">
+                <img id="PORTADAS" src="../images/portadas/mushoku-tensei:-isekai-ittara-honki-dasu.jpg" alt="">
+            </a>
+        </article>
+
+        <article id="josei">
+            <h4>Gokutei Higuma</h4>
+            <a href="mangas/ayanashi/front.html">
+                <img id="PORTADAS" src="../images/portadas/gokutei-higuma.jpg" alt="">
+            </a>
+        </article>
+
+        <article id="seinen">
+            <h4>Raise Kamika</h4>
+            <a href="mangas/">
+                <img id="PORTADAS" src="../images/portadas/raise-kamika.jpg" alt="">
+            </a>
+        </article>
+
+
+
+        <article id="seinen">
+            <h4>Nanatsu No Taizai</h4>
+            <a href="mangas/">
+                <img id="PORTADAS" src="../images/portadas/nanatsu-no-taizai.jpg" alt="">
+            </a>
+        </article>
+
+        <article id="seinen">
+            <h4>Tsuyokute New Saga</h4>
+            <a href="">
+                <img id="PORTADAS" src="../images/portadas/tsuyokute-new-saga.jpg" alt="">
+            </a>
+        </article>
+
+        <article id="seinen">
+            <h4>Tsuki Ga Michibiku Isekai Douchuu</h4>
+            <a href="mangas/">
+                <img id="PORTADAS" src="../images/portadas/tsuki-ga-michibiku-isekai-douchuu.jpg" alt="">
+            </a>
+        </article>
+
+        <article id="seinen">
+            <h4>Marimashita Iruma-kun</h4>
+            <a href="mangas/">
+                <img id="PORTADAS" src="../images/portadas/mairimashita-iruma-kun.jpg" alt="">
+            </a>
+        </article>
+
+        <article id="seinen">
+            <h4>Shuumatsu Vo Valkyrie</h4>
+            <a href="mangas/">
+                <img id="PORTADAS" src="../images/portadas/shuumatsu-no-valkyrie.jpg" alt="">
+            </a>
+        </article>
+
+
+
+        <article id="seinen">
+            <h4>Fire Punch</h4>
+            <a href="mangas/">
+                <img id="PORTADAS" src="../images/portadas/fire-punch.jpg" alt="">
+            </a>
+        </article>
+
+        <article id="seinen">
+            <h4>Freaks</h4>
+            <a href="mangas/">
+                <img id="PORTADAS" src="../images/portadas/freaks.jpg" alt="">
+            </a>
+        </article>
+
+        <!-- Pag Navigation [1][2][3]... -->
+        <!-- <nav class="pagNavegation">
+            <ul>
+                <li id="actualPage"><a href="index.html">1</a></li>
+                <li><a href="error.html">2</a></li>
+                <li><a href="error.html">3</a></li>
+            </ul>
+        </nav> -->
 
     </main>
 
